--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,8 @@
-log.html
-output.xml
-report.html
-selenium-screenshot-*
-*/Results*
-.bash_history
-Vagrant-robotframeworktesting/.vagrant/
-VagrantAvailabilityTestResults/
-VagrantFunctionalTestResults/
-VagrantEndToEndTestResults/
-*pabot_results/
-*.pyc
-*.egg-info
-*$py.class
-.venv
-venv/
-.tox
-cover
-coverage.xml
-.coverage
-pylint.out
-xunit.xml
-nosetests.xml
-geckodriver.log
-*.DS_Store*
-.scannerwork*
 
-*/target/*
+*.DS_Store*
 /Screenshots
-*.pydevproject
 .project
 /.plugins/
-
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
 local.properties
 .classpath
 .settings/
@@ -47,3 +12,7 @@ local.properties
 .metadata/*
 .metadata
 *.idea*
+.project
+cucumber.json
+target
+*/target/*
